# whisparr-sync

./: README.md  build_site.sh  pyproject.toml  quick.py  requirements-dev.txt  tasks.py
docs/: refactor.md  testing-plans.md
plugins/whisparr-bridge/: config.py  config.toml  whisparr-bridge.py  whisparr-bridge.yml
plugins/whisparr-sync/: config.py  requirements.txt  whisparr-sync.py  whisparr-sync.yml
