[project]
name = "whisparr-sync"
version = "1.0.0"
description = "A stash plugin sync to Whisparr v3 (eros)"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "tomli (>=2.3.0,<3.0.0)",
    "stashapi (>=0.1.2,<0.2.0)"
]

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "pycodestyle>=2.10.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=4.3.0",
    "mypy>=1.5.1",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
    "ipython>=8.15.0",
    "invoke>=1.7.3",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)"
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false